# tauri-plugin-store

./: Cargo.toml  package.json
