[package]
name = "tauri-plugin-store"
version = "0.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "A Tauri plugin for simple data persistency"
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]
license = "Apache-2.0 OR MIT"

[dependencies]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "mac-app-hide" }
serde = "1.0.137"
serde_json = "1.0.81"
thiserror = "1.0.31"
log = "0.4.17"

[features]
